About: fix layout on mobile; cleanup markup & styling

--- a/src/scss/_style.sass
+++ b/src/scss/_style.sass
@@ -201,19 +201,6 @@
         .about-profile-box
             font-size: 1rem
             padding-left: 10px
-        //TODO remove ucr stamp on small devices
-        &::before
-            content: ""
-            //TODO absolute url for images
-            //background: url('../media/UCR_seal_200px.gif') no-repeat center center
-            background-size: 280px
-            opacity: 0.1
-            top: -378px
-            left: 0
-            bottom: 0
-            right: 0
-            position: absolute
-            z-index: -1
 
 
 /*---------------------------------------
